# interview_test

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
src/backend/: main.py
src/backend/api/: schemas.py
src/backend/api/routes/: questions.py  sessions.py
src/backend/core/: config.py  database.py  dependencies.py
src/backend/models/: session.py
src/backend/modules/: provider.py
src/backend/modules/llm/: base.py  gemini.py  groq.py  prompts.py
src/backend/modules/stt/: base.py  gemini.py  groq.py
src/backend/modules/tts/: base.py  gemini.py  groq.py
src/backend/services/: interview.py
src/frontend/: index.html  package-lock.json
src/frontend/src/: App.tsx
src/frontend/src/components/: AudioPlayer.tsx  ErrorBoundary.tsx  ResultCard.tsx  Spinner.tsx
src/frontend/src/hooks/: useAudioRecorder.ts
src/frontend/src/pages/: HistoryPage.tsx  InterviewPage.tsx  SetupPage.tsx  SummaryPage.tsx
src/frontend/src/services/: api.ts
src/frontend/src/types/: index.ts
src/frontend/src/utils/: score.ts
